# flow3r

./: .gitignore  activate.bat  activate.sh  gradio_app_onnx.py  pyproject.toml  setup.py
scripts/: export_encoder_onnx.py  export_onnx.py
src/flow3r/models/: flow3r.py  onnx_compat.py
src/flow3r/models/curope/: __init__.py  curope.cpp  curope2d.py  kernels.cu  setup.py
src/flow3r/models/dinov2/hub/: backbones.py
src/flow3r/models/dinov2/layers/: patch_embed.py
src/flow3r/models/dinov2/models/: vision_transformer.py
src/flow3r/models/layers/: camera_head.py  pos_embed.py
src/flow3r/utils/: basic.py  cropping.py
