[project]
authors = [
    { name = "Charles JAVERLIAT", email = "charles.javerliat@gmail.com" },
]
dependencies = []
name = "flow3r"
requires-python = ">= 3.10"
version = "0.2.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
flow3r = { path = ".", editable = true }
torch = { version = "==2.10.*", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { version = ">=0.22.0", index = "https://download.pytorch.org/whl/cu128" }
torchaudio = { version = "==2.10.*", index = "https://download.pytorch.org/whl/cu128" }
numpy = "*"
opencv-python = "*"
pillow = "*"
plyfile = "*"
huggingface_hub = "*"
safetensors = "*"
hydra-core = "*"
accelerate = "*"
rich = "*"
pandas = "*"
transformers = "*"
flow-vis = "*"
h5py = "*"
trimesh = "*"
gradio = "*"
matplotlib = "*"
scipy = "*"

[tool.pixi.tasks]
