[project]
authors = [
    { name = "Charles JAVERLIAT", email = "charles.javerliat@gmail.com" },
]
dependencies = []
name = "flow3r"
requires-python = ">= 3.10"
version = "0.2.3"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "torch"]

[tool.pixi.workspace]
channels = ["conda-forge", "nvidia"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
flow3r = { path = ".", editable = true }
torch = { version = ">=2.5", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { index = "https://download.pytorch.org/whl/cu128" }
torchaudio = { index = "https://download.pytorch.org/whl/cu128" }
numpy = "*"
opencv-python = "*"
pillow = "*"
plyfile = "*"
huggingface_hub = "*"
safetensors = "*"
hydra-core = "*"
accelerate = "*"
rich = "*"
pandas = "*"
transformers = "*"
flow-vis = "*"
h5py = "*"
trimesh = "*"
gradio = "*"
matplotlib = "*"
scipy = "*"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flow3r*"]

[tool.pixi.feature.cuda128]
platforms = ["linux-64", "win-64"]
channels = ["conda-forge", "nvidia"]

[tool.pixi.feature.cuda128.system-requirements]
cuda = "12.8"

[tool.pixi.target.win-64.dependencies]
vs2022_win-64 = "*" # to activate vcvars64.bat automatically when the pixi environment is activated
vc = "*"
vswhere = "*"

[tool.pixi.target.linux-64.activation]
scripts = ["activate.sh"]

[tool.pixi.target.win-64.activation]
scripts = ["activate.bat"]

[tool.pixi.feature.cuda128.dependencies]
cuda-version = "12.8.*"
cuda-nvcc = "*"

[tool.pixi.dependencies]
python = ">=3.10"
pip = "*"
pixi-pycharm = ">=0.0.11,<0.0.12"
cmake = "*"
ninja = "*"

[tool.pixi.feature.onnx.dependencies]
python = ">=3.10,<3.14"

[tool.pixi.feature.onnx.pypi-dependencies]
onnx = "*"
onnxscript = "*"
onnxruntime-gpu = "*"
onnxsim = "*"
pytest = "*"
# PyTorch >2.8 causes an issue while compiling on Windows
# - https://github.com/pytorch/pytorch/issues/148317#issuecomment-3344732754
# - https://github.com/pytorch/pytorch/pull/144707#issuecomment-2692282551)
torch = { version = "==2.8.*", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { version = ">=0.22.0", index = "https://download.pytorch.org/whl/cu128" }
torchaudio = { version = "==2.8.*", index = "https://download.pytorch.org/whl/cu128" }

[tool.pixi.environments.default]
features = ["cuda128"]
solve-group = "default"

[tool.pixi.environments.onnx]
features = ["cuda128", "onnx"]
solve-group = "default"

[tool.pixi.tasks]
build-curope = "pip install -e . --no-build-isolation"
gradio-app = "python gradio_app.py"

[tool.pixi.feature.onnx.tasks]
export-encoder-onnx = "python scripts/export_encoder_onnx.py"
export-onnx = "python scripts/export_onnx.py"
gradio-app-onnx = "python gradio_app_onnx.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that load the pretrained Flow3r checkpoint",
    "onnx: tests that run torch.onnx.export and/or onnxruntime",
]
